# KajiAI

./: .gitignore  README.md  pyproject.toml
src/kaji/: crew.py  flow.py  main.py
src/kaji/agents/: contradiction_analyst.py  fact_checker.py  lead_researcher.py  source_analyst.py  synthesis_writer.py
src/kaji/cache/: evidence_cache.py  scrape_cache.py  search_cache.py
src/kaji/config/: agents.yaml  models.yaml  policies.yaml  profiles.yaml  tasks.yaml  verdict_rules.yaml
src/kaji/crews/: base_crew.py  execution_context.py  fact_check_crew.py  profile_loader.py
src/kaji/execution/: budget_manager.py  execution_monitor.py  policy_engine.py  retry_controller.py  tool_router.py
src/kaji/interfaces/: api.py  cli.py  gradio_app.py
src/kaji/models/: provider.py
src/kaji/output/: disclaimer.py  formatter.py  templates.py
src/kaji/routing/: claim_decomposer.py  classifier.py  domain_router.py  tool_selector.py
src/kaji/tools/: custom_tool.py  duckduckgo.py
src/kaji/tools/rag/: code_docs_rag.py  vectordb_connector.py  website_rag.py
src/kaji/tools/scraping/: browserbase_tool.py  firecrawl_tools.py  scrapfly_tool.py  selenium_tool.py
src/kaji/tools/search/: arxiv_tool.py  brave_tool.py  exa_tool.py  serper_tool.py  tavily_suite.py  youtube_rag.py
src/kaji/verdict/: confidence_engine.py  consensus_engine.py  engine.py  labels.py  source_ranker.py
src/kaji/verification/: citation_checker.py  contradiction_scanner.py  evidence_validator.py  grounding_validator.py
tests/: test_classifier.py  test_tools.py  test_verdicts.py  test_verification.py
