[project]
name = "kaji"
version = "0.1.0"
description = "KajiSF-DJ — AI-assisted evidence aggregation and claim analysis platform"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "gradio>=5.0.0",
    "uvicorn>=0.30.0",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
kaji = "kaji.main:run"
kaji-demo = "kaji.main:demo"
run_crew = "kaji.main:run"
train = "kaji.main:train"
replay = "kaji.main:replay"
test = "kaji.main:test"
run_with_trigger = "kaji.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
testpaths = ["tests"]
